--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content" />
         <EditText
-            android:id="@+id/txtPassword"
+            android:id="@+id/txtPassword" android:inputType="textPassword"
             android:layout_width="1dip"
             android:layout_weight="2"
             android:layout_height="wrap_content" />
