--- a/app/src/main/res/layout/custom_drawer_item.xml
+++ b/app/src/main/res/layout/custom_drawer_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:id="@+id/itemLayout"
@@ -11,21 +11,19 @@
         android:orientation="vertical"
 
         android:layout_marginTop="0dp"
-        android:background="?android:attr/activatedBackgroundIndicator"
-        >
+        android:background="?android:attr/activatedBackgroundIndicator">
 
         <LinearLayout
 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:minHeight="55dp"
+
             >
 
             <ImageView
                 android:id="@+id/drawer_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/drawer_itemName"
