--- a/app/src/main/res/layout/fragment_open_service_detail.xml
+++ b/app/src/main/res/layout/fragment_open_service_detail.xml
@@ -4,7 +4,7 @@
     tools:context="com.microtecweb.css_mobile.OpenServiceDetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/lbDetail"
         android:text="detail" />
 
 </FrameLayout>
