change main menu

--- a/app/src/main/res/layout/custom_drawer_item.xml
+++ b/app/src/main/res/layout/custom_drawer_item.xml
@@ -17,7 +17,7 @@
 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-
+            android:minHeight="32dp"
             >
 
             <ImageView
@@ -29,6 +29,7 @@
                 android:id="@+id/drawer_itemName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
 
                 />
