--- a/app/src/main/res/menu/menu_main_menu.xml
+++ b/app/src/main/res/menu/menu_main_menu.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.microtecweb.css_mobile.MainMenu">
 
-    <item android:id="@+id/action_search"
-        android:icon="@drawable/ic_action_search"
-        android:title="Search"
-        app:showAsAction="always" />
+    <!--<item android:id="@+id/action_search"-->
+        <!--android:icon="@drawable/ic_action_search"-->
+        <!--android:title="Search"-->
+        <!--app:showAsAction="always" />-->
 
 
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
+        <!--android:orderInCategory="100" app:showAsAction="never" />-->
 </menu>
