--- a/app/src/main/res/layout/row_servicepart.xml
+++ b/app/src/main/res/layout/row_servicepart.xml
@@ -12,18 +12,27 @@
         <TextView
             android:id="@+id/tvPartName"
             android:layout_width="1dip"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="2.5dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/tvQuantity"
             android:layout_width="1dip"
             android:layout_weight="1"
+            android:layout_marginLeft="2.5dp"
+            android:layout_marginRight="2.5dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvStore"
             android:layout_width="1dip"
-            android:layout_weight="1"
+            android:layout_weight="2"
+            android:layout_marginLeft="2.5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
