Upload full function for HieuHT

--- a/app/src/main/res/layout/fragment_open_service.xml
+++ b/app/src/main/res/layout/fragment_open_service.xml
@@ -10,6 +10,7 @@
         android:id="@+id/lstOpenService"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:listSelector="@drawable/list_selector"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
          />
