--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+       <ImageView
+           android:layout_width="fill_parent"
+           android:layout_height="fill_parent"
+           android:src="@drawable/ic_launcher"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
     <TextView android:text="@string/lb_account"
         android:layout_width="1dip"
         android:layout_weight="1"
