--- a/app/src/main/res/layout/fragment_service_history.xml
+++ b/app/src/main/res/layout/fragment_service_history.xml
@@ -25,19 +25,85 @@
             android:layout_height="wrap_content"
             android:text="@string/radio_outbox" />
     </RadioGroup>
-    <Button
-        android:id="@+id/btScan"
-        android:text="@string/lb_scan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/radioDirection"/>
-    <ListView
-        android:id="@+id/listSms"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btScan">
-    </ListView>
+    <LinearLayout
+        android:id="@+id/dtSelect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_below="@+id/radioDirection">
+        <!--  ListRow Left sied Thumbnail image -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/lb_from"
+                android:layout_width="1dip"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2.5dp"
+                android:layout_marginTop="5dp"
+                android:textStyle="bold"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/txtFrom"
+                android:layout_width="1dip"
+                android:layout_weight="2"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/lb_to"
+                android:layout_width="1dip"
+                android:layout_weight="1"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2.5dp"
+                android:layout_marginTop="5dp"
+                android:textStyle="bold"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/txtTo"
+                android:layout_width="1dip"
+                android:layout_weight="2"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="wrap_content" />
+
+            <ImageButton
+                android:id="@+id/btScan"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_width="1dip"
+                android:layout_weight="1"
+                android:src="@drawable/ic_action_search"
+                android:layout_height="wrap_content"
+                android:labelFor="@string/lb_scan" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/listSms"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></ListView>
+        </LinearLayout>
+    </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
